varnish (3.0.0-4) UNRELEASED; urgency=low

  * Drop build-dep on tcl, it's no longer needed.
  * Change automake build-dep to automake rather than forcing 1.9.

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 23 Aug 2011 07:53:12 +0200

varnish (3.0.0-3) unstable; urgency=low

  * Disable build tests (Closes: #632320)

 -- Stig Sandbeck Mathisen <ssm@debian.org>  Sun, 17 Jul 2011 12:08:19 +0200

varnish (3.0.0-2) unstable; urgency=low

  [ Daniel Baumann ]
  * Conditionally replace jquery.js in dh_installdocs override in order to
    not fail when building arch any packages only (Closes: #631895).

 -- Stig Sandbeck Mathisen <ssm@debian.org>  Tue, 28 Jun 2011 06:53:35 +0200

varnish (3.0.0-1) unstable; urgency=low

  * New upstream release
  * Add a varnish-log package
  * Rename the library packages, to reflect library name
  * Add new upstream URI to debian/watch

 -- Stig Sandbeck Mathisen <ssm@debian.org>  Thu, 23 Jun 2011 10:49:45 +0200

varnish (2.1.5-2) unstable; urgency=low

  * Release for unstable

 -- Stig Sandbeck Mathisen <ssm@debian.org>  Mon, 21 Mar 2011 10:16:07 +0100

varnish (2.1.5-1) experimental; urgency=low

  * New upstream release
  * Change default storage method to malloc, 256 MB
  * Start varnishd by default, since the new storage method has less system
    impact
  * Update symbols file for 2.1.5

 -- Stig Sandbeck Mathisen <ssm@debian.org>  Wed, 02 Feb 2011 13:33:53 +0100

varnish (2.1.4-1) experimental; urgency=low

  * New upstream version
  * Update symbols file for 2.1.4
  * Cherry-pick fix for upstream bug #801. Remove duplicate Content-
    Length header

 -- Stig Sandbeck Mathisen <ssm@debian.org>  Wed, 03 Nov 2010 16:44:08 +0100

varnish (2.1.3-8) unstable; urgency=high

  * Fix random secret creation on non-Linux kernels (Closes: #596373)
  * Urgency "high" due to FTBFS RC bug during squeeze freeze

 -- Stig Sandbeck Mathisen <ssm@debian.org>  Fri, 24 Sep 2010 17:51:20 +0200

varnish (2.1.3-7) unstable; urgency=high
