@@ -1,7 +1,5 @@
 usr/include
 usr/lib/*.a
-usr/lib/*.la
 usr/lib/libvarnishapi.so
 usr/lib/pkgconfig/*.pc
 usr/lib/varnish/*.a
-usr/lib/varnish/*.la
