@@ -39,11 +39,9 @@ override_dh_auto_install:
 	@ # Activate the default backend
 	sed -i '/backend default {/,/}/ s/^#[[:space:]]//'  \
 		$(CURDIR)/debian/tmp/etc/varnish/default.vcl
-	@ # Remove dependency_libs from .la files
+	@ # Remove .la files
 	@ # (See http://wiki.debian.org/ReleaseGoals/LAFileRemoval)
-	sed -i "/dependency_libs/ s/'.*'/''/" \
-		$(CURDIR)/debian/tmp/usr/lib/*.la \
-		$(CURDIR)/debian/tmp/usr/lib/varnish/*.la
+	find $(CURDIR)/debian/ -name \*.la -delete
 
 override_dh_install:
 	dh_install -a
