@@ -2,6 +2,7 @@ varnish (3.0.0-4) UNRELEASED; urgency=low
 
   * Drop build-dep on tcl, it's no longer needed.
   * Change automake build-dep to automake rather than forcing 1.9.
+  * Remove .la files rather than neutering them.
 
  -- Tollef Fog Heen <tfheen@debian.org>  Tue, 23 Aug 2011 07:53:12 +0200
 
